--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -45,14 +45,14 @@
                           Booking
                           </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                           <a class="nav-link"
                           routerLink="/calendar"
                           routerLinkActive="activebutton"
                           ariaCurrentWhenActive="page">
                           Calendar
                           </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                           <a class="nav-link"
                           routerLink="/contactus"
@@ -72,7 +72,7 @@
                     <div class="col-lg-6">
                       <h1>Let's get the party started.</h1>
                       <!-- <i class="fas fa-check-circle fa-4x ia"></i> -->
-                       <i class="fas fa-bullhorn fa-3x ic "></i>
+                      <i class="fas fa-glass-cheers fa-3x ic "></i>
                       
             
                     </div>
