--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -61,9 +61,8 @@
       <!-- Section: Text -->
       <section class="mb-4">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-          repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-          eum harum corrupti dicta, aliquam sequi voluptate quas.
+         <strong>The Confetti</strong> event management company can take care of all the organisation and tasks to deliver a successful event, allowing you to focus on the day and your guests. The true quality of the service will show if there is a problem. A good event management company will have contingencies in case plan A or B doesn’t work.
+     
         </p>
       </section>
       <!-- Section: Text -->
@@ -80,8 +79,8 @@
   
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2022 Copyright:
+      <a class="text-white" href="https://brillio.com/">Brillio.com</a>
     </div>
     <!-- Copyright -->
   </footer>
