--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -103,7 +103,7 @@
                             id="Gender"
                             name="gender"
                           >
-                            <option value="" disabled selected>Gender</option>
+                            <option  value="undefined" disabled selected>Gender</option>
                             <option value="M">Male</option>
                             <option value="F">Female</option>
                             <option value="O">Others</option>
@@ -122,7 +122,7 @@
                             <input
                                 formControlName="phn"
                                 type="tel"
-                                placeholder="Number"
+                                placeholder="Phone Number"
                                 pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}"
                                 maxlength="10"
                                 class="form-control"
@@ -162,7 +162,7 @@
                     </div>
                     <input
                     formControlName="pwd"
-                    placeholder="confirm password"
+                    placeholder="Confirm password"
                     type="password"
                     class="form-control"
                     id="confirm_password"
